force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Active__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>