force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>