force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>