force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__End_Date__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>