force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Filter_Value__c</fullName>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>