force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>