force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Frequency_Type__c</fullName>
    <label>Frequency Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>