force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__From_Address__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__From_Address__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>