force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Last_Failure__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Last_Failure__c</fullName>
    <description>Stores the date/time for the most recent send failure</description>
    <label>Last Failure</label>
    <type>DateTime</type>
</CustomField>