force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>