force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Report_Id__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Report_Id__c</fullName>
    <label>Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>