force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Retry_If_Failed__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Retry_If_Failed__c</fullName>
    <inlineHelpText>If the report fails, we can retry. The first retry will be immediate, subsequent retries will be spaced an hour apart. This helps if the report gets a Read Time Out error sometimes.</inlineHelpText>
    <label>Retry If Failed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Retry</fullName>
            </value>
            <value>
                <fullName>Retry Immediately</fullName>
            </value>
            <value>
                <fullName>Retry Two Times</fullName>
            </value>
            <value>
                <fullName>Retry Three Times</fullName>
            </value>
            <value>
                <fullName>Retry Four Times</fullName>
            </value>
            <value>
                <fullName>Retry Five Times</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>