force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Template__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>analyticsengine__Setting__c</referenceTo>
    <relationshipLabel>Report Schedules</relationshipLabel>
    <relationshipName>Filtered_Sends</relationshipName>
    <type>Lookup</type>
</CustomField>