force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__To_Address_1__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__To_Address_1__c</fullName>
    <label>To_Address_1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>