force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__To_Address__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__To_Address__c</fullName>
    <label>To Address (Deprecated)</label>
    <type>TextArea</type>
</CustomField>