force-app/main/default/objects/analyticsengine__Setting__c/listViews/analyticsengine__All.listView-meta.xml
<ListView>
    <fullName>analyticsengine__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>